// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation collapses successfully at nested level 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-19 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

.emotion-9 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 svg {
  fill: #0a68c1;
}

.emotion-9:hover:not(:disabled) {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-9:active:not(:disabled) {
  color: #01396e;
}

.emotion-9:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-9:visited:not(:disabled) {
  color: #0a68c1;
}

.emotion-9:visited:not(:disabled) svg {
  fill: #0a68c1;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-9 {
    vertical-align: text-bottom;
  }
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-19"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 14l5-5 5 5z"
            />
          </svg>
        </div>
        <ul
          class="emotion-19"
          role="list"
        >
          <li
            class="emotion-3"
          >
            <a
              class="emotion-9"
              href="/group2/page1"
            >
              <span
                class="emotion-8"
              >
                <div
                  class="emotion-2"
                  data-testid="/group2/page1"
                  tabindex="-1"
                >
                  Group 2 Page 1
                </div>
              </span>
            </a>
          </li>
          <li
            class="emotion-3"
          >
            <a
              class="emotion-9"
              href="/group2/page2"
            >
              <span
                class="emotion-8"
              >
                <div
                  class="emotion-2"
                  data-testid="/group2/page2"
                  tabindex="-1"
                >
                  Group 2 Page 2
                </div>
              </span>
            </a>
          </li>
          <li
            class="emotion-3"
          >
            <div
              class="emotion-2"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                aria-hidden="true"
                class="emotion-0 emotion-1"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after click group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<nav
    aria-label="Sidebar"
    class="emotion-9"
    role="navigation"
  >
    <ul
      class="emotion-8"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after enter key group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<nav
    aria-label="Sidebar"
    class="emotion-9"
    role="navigation"
  >
    <ul
      class="emotion-8"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page by clicking on components menu, group1 menu collapses and group2 menu expands 1`] = `
<DocumentFragment>
  .emotion-22 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-19 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

.emotion-9 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 svg {
  fill: #0a68c1;
}

.emotion-9:hover:not(:disabled) {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-9:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-9:active:not(:disabled) {
  color: #01396e;
}

.emotion-9:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-9:visited:not(:disabled) {
  color: #0a68c1;
}

.emotion-9:visited:not(:disabled) svg {
  fill: #0a68c1;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-9 {
    vertical-align: text-bottom;
  }
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #0a68c1;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-6:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-6:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-6:focus svg polygon {
  fill: #ffffff;
}

.emotion-6 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-6 a:visited {
  color: #0a0a0a;
}

.emotion-6 svg {
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-22"
    role="navigation"
  >
    <ul
      class="emotion-19"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-6"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 14l5-5 5 5z"
            />
          </svg>
        </div>
        <ul
          class="emotion-19"
          role="list"
        >
          <li
            class="emotion-3"
          >
            <a
              class="emotion-9"
              href="/group2/page1"
            >
              <span
                class="emotion-8"
              >
                <div
                  class="emotion-2"
                  data-testid="/group2/page1"
                  tabindex="-1"
                >
                  Group 2 Page 1
                </div>
              </span>
            </a>
          </li>
          <li
            class="emotion-3"
          >
            <a
              class="emotion-9"
              href="/group2/page2"
            >
              <span
                class="emotion-8"
              >
                <div
                  class="emotion-2"
                  data-testid="/group2/page2"
                  tabindex="-1"
                >
                  Group 2 Page 2
                </div>
              </span>
            </a>
          </li>
          <li
            class="emotion-3"
          >
            <div
              class="emotion-2"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                aria-hidden="true"
                class="emotion-0 emotion-1"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page renders as expected 1`] = `
<DocumentFragment>
  .emotion-14 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-7 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-6 .emotion-6,
.emotion-6 .emotion-6 .emotion-6 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 svg {
  fill: #0a68c1;
}

.emotion-5:hover:not(:disabled) {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-5:active:not(:disabled) {
  color: #01396e;
}

.emotion-5:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-5:visited:not(:disabled) {
  color: #0a68c1;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #0a68c1;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #0a68c1;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-3:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-3:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-3:focus svg polygon {
  fill: #ffffff;
}

.emotion-3 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-3 a:visited {
  color: #0a0a0a;
}

.emotion-3 svg {
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-14"
    role="navigation"
  >
    <ul
      class="emotion-7"
      role="list"
    >
      <li
        class="emotion-6"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 14l5-5 5 5z"
            />
          </svg>
        </div>
        <ul
          class="emotion-7"
          role="list"
        >
          <li
            class="emotion-6"
          >
            <a
              class="emotion-5"
              href="/group1/page1"
            >
              <span
                class="emotion-4"
              >
                <div
                  class="emotion-3"
                  data-testid="/group1/page1"
                  tabindex="-1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-6"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders as expected 1`] = `
<DocumentFragment>
  .emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<nav
    aria-label="Sidebar"
    class="emotion-9"
    role="navigation"
  >
    <ul
      class="emotion-8"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders correctly without given path 1`] = `
<DocumentFragment>
  .emotion-9 {
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-8 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-3 {
  list-style-type: none;
  margin: 0px;
  padding: 0 4px;
}

.emotion-3 .emotion-3,
.emotion-3 .emotion-3 .emotion-3 {
  padding-right: 0;
}

.emotion-2 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #e6f4ff;
}

.emotion-2:focus {
  outline: none;
  color: #ffffff;
  background-color: #0a68c1;
}

.emotion-2:focus svg polygon {
  fill: #ffffff;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

.emotion-2 svg {
  float: right;
}

.emotion-0 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  vertical-align: unset;
  display: inline-block;
}

.emotion-0.emotion-0 {
  width: 24px;
  height: 24px;
}

<nav
    aria-label="Sidebar"
    class="emotion-9"
    role="navigation"
  >
    <ul
      class="emotion-8"
      role="list"
    >
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
      <li
        class="emotion-3"
      >
        <div
          class="emotion-2"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            aria-hidden="true"
            class="emotion-0 emotion-1"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
